syntax = "proto3";
package kernel_tracer;

service KernelTracer {
    rpc GetKernelSupport(Empty) returns (KernelInfo);
    rpc GetPIDTraceInfo (PIDTraceInfoRequest) returns (stream TraceInfo);
    rpc GetMetrics      (Empty) returns (Metrics);
}

message Empty {
}

message Metrics {
    uint64 event_failure_count = 1;
    uint64 event_success_count = 2;
    uint64 ebf_buffer_capacity = 3;
}

message KernelVersion {
    string major = 1;
    string minor = 2;
    string patch = 3;
}

message KernelInfo {
    KernelVersion version = 1;
}

message TraceInfo {
    oneof message {
        string path = 1;
    }
}

message PIDTraceInfoRequest {
    string pid = 1;
}
